# DevelopmentPrinicples

./: CMakeLists.txt  PROJECT_OVERVIEW-pokenoSouth105_project_example.md  T020-T021_IMPLEMENTATION_COMPLETE.md  T027_T029_IMPLEMENTATION_COMPLETE.md  T031-T033_Implementation_Report.md  T041-T043_Implementation_Report.md  T050-T052_IMPLEMENTATION_SUMMARY.md
.github/: copilot-instructions.md
data/: assessments.csv  courses.csv  students.csv
docs/: T018_T019_implementation_summary.md  T020_T021_compilation_fix_notes.md  design_decisions.md  learning_outcomes.md  troubleshooting.md  user_manual.md
docs/architecture/: class-diagram-analysis.md  class-diagram.puml
specs/001-as-a-junior/: spec.md
specs/002-junior-developer-implementation/: spec.md
specs/003-class-design-demonstrating/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks-architecture-documentation.md  tasks-bugfix.md  tasks.md
specs/003-class-design-demonstrating/contracts/: course-interface.md  filehandler-interface.md  student-interface.md
src/: Assessment.cpp  Assessment.hpp  Course.cpp  Course.hpp  FileHandler.cpp  FileHandler.hpp  Grade.cpp  Grade.hpp  GradeCalculator.cpp  GradeCalculator.hpp  Student.cpp  Student.hpp  System.cpp  System.hpp  Usings.hpp  common.cpp  common.hpp  main.cpp
tests/: T025_T026_completion_report.md  integration_test_T024.md
tests/manual_test_scenarios/: T018_T019_data_integration_tests.md  T025_test_execution_results.md  T047_prototype_validation.md  T048_performance_validation.md  assessment_tests.md  course_tests.md  filehandler_tests.md  performance_tests.md  student_tests.md  system_tests.md
